--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -82,6 +82,7 @@ jobs:
           version: v1.50.1
           only-new-issues: ${{ github.event.schedule == '' }} # show only new issues, unless it's a scheduled run
           allow-extra-out-format-args: true
+          skip-cache: true
           args: --out-format checkstyle:golangci-lint-report.xml
       - name: Store lint report artifact
         if: always()
